fixed dropdown overflow & cleared other pgs

--- a/finalproject/fittingroom/static/fittingroom/style.css
+++ b/finalproject/fittingroom/static/fittingroom/style.css
@@ -36,7 +36,6 @@ p {
 #main-content, #title-box {
   align-items: center;
   padding-top: 50px;
-  /* padding-top: 100px; */
 }
 
 /* #title-box {
@@ -55,6 +54,7 @@ p {
   /* justify-content: center; */
   width: 764px;
   height: 480px;
+  overflow: auto;
   z-index: 10;
 }
 
@@ -65,11 +65,16 @@ p {
 
 .cover {
   height: 107px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .icons {
   padding: 25px 0px 15px 25px;
+
+  background-color: #EAE5E1;
+  width: 740px;
+  position: fixed;
+  z-index: 50;
 }
 
 .icons img {
@@ -81,7 +86,7 @@ p {
  
   justify-content: space-around;
   /* padding-top: 30px; */
-  padding: 30px 0px 10px 0px;
+  padding: 100px 0px 10px 0px;
 }
 
 .hidden {
